# cflux_nliw

./: README.md  pyproject.toml  setup.cfg
notebooks/0_identify_despike_save/: ch3_L0_identify_NLIW.ipynb  ch3_L0_saveall_SIG_UC.ipynb  ch3_L1_save_veldata.ipynb  ch3_L2_save_Cdata.ipynb  ch3_L3_save_ADCP4beam_NLIW.ipynb  ch3_L3_save_C5beam_NLIW.ipynb
notebooks/1_pyddcurves/: calc_M1celerity_RS19_T150.ipynb  fit_pyddcurves_RS19_T150.ipynb
notebooks/2_scotti_solibores/: calc_celerity_RS2019_NLIW_ADCP_V4.ipynb
notebooks/3_save_fluxes_UQ/: L0_save_NLIW_fluxes_V2.ipynb  L1_add_NLIW_attributes_V1.ipynb
notebooks/4_event_plots/: compare_NLIW.ipynb  plot_NLIW.ipynb  plot_NLIW_lagprofile_2019all.ipynb
notebooks/5_supporting_analysis/: plot_NLIW_supp_V1.ipynb  plot_RS19_map_F1v1.ipynb
src/cflux_nliw/: cflux_basefuncs.py  cflux_despike.py  cflux_fluxfuncs.py  cflux_paperplots.py  cflux_plotfuncs.py  cflux_polarfuncs.py  cflux_pymc3funcs.py  cflux_samplefuncs.py
