[metadata]
name = cflux_nliw
version = 0.02

[project]
name = "cflux_nliw"
version = "0.02"
authors = [
	{ name="William Edge", email="william.edge@uwa.edu.au" }]
description = "Python package for computing vertical sediment fluxes from a 5-beam ADCP."
requires-python = ">=3.8"
long_description_content_type = text/markdown
project_urls =
	Homepage = https://github.com/williamedge/cflux_nliw
    Bug Tracker = https://github.com/williamedge/cflux_nliw/issues
    Changelog = https://github.com/williamedge/cflux_nliw/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
	pandas
    scipy
    xarray
    matplotlib
    cmocean
	xrft
	colorstamps
	tqdm
	notebook
	ipykernel
	dask
    sparse


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cflux_nliw = cflux_nliw.app:entry_point